[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/card/card.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/back.png" type="Texture" id=2]
[ext_resource path="res://scenes/tweening/card_tween.gd" type="Script" id=3]
[ext_resource path="res://scenes/tweening/tweening.gd" type="Script" id=4]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_strength = 0.9
glow_blend_mode = 0

[node name="Tweening" type="Node2D"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CardTween" type="Tween" parent="."]
script = ExtResource( 3 )

[node name="Deck" parent="." instance=ExtResource( 1 )]
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 58.0
margin_top = 254.0
margin_right = 118.0
margin_bottom = 284.0
text = "Deal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DealPosition" type="Node2D" parent="."]
position = Vector2( 89, 296 )

[connection signal="tween_completed" from="CardTween" to="." method="_on_tween_completed"]
[connection signal="pressed" from="Button" to="." method="_on_deal_pressed"]
